@@ -57,6 +57,7 @@
  * #954 (CompositeProcess::getFuture() broken)
  * #957 (RandomMixture::getDispersionIndicator() takes a long time)
  * #959 (The PolygonArray and Polygon classes poorly manage the colors)
+ * #961 (The PolygonArray class seem to ignore the legends)
  * #962 (The doc of MetaModelValidation.computePredictivityFactor is wrong)
  * #964 (Study does not load LogNormalMuSigma variables from XML)
  * #965 (A RandomVector from a RandomVector can make OT crash)
